--- a/home/src/app/page/index/index.component.html
+++ b/home/src/app/page/index/index.component.html
@@ -1,202 +1,4 @@
-<div id="banner">
-     <div class="sp-container-fluid">
-          <div class="content">
-               <div #nameInput class="items row" [ngStyle]="{'marginLeft.px': marginLeft}">
-                    <div class="item " [style.background-color]="'#b8292f'"
-                         [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
-                         <div class="container">
-                              <img src="https://vietstarmax.vn/images/2021/12/09/vsm-numb1.webp" alt="">
-                         </div>
-                    </div>
-                    <div class="item"
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-phim-tvc3.webp)'"
-                         [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
-                         <div class="banner-content">
-                              <div class="container">
-
-                                   <div class="banner-content-wrap">
-                                        <div class="title-banner">Dịch vụ sản xuất Phim quảng cáo TVC</div>
-                                        <div class="des-banner">Nhà sản xuất phim quảng cáo số 1 miền Bắc ,
-                                             <br>
-                                             trên 12 năm kinh nghiệm
-                                             với hơn 2000 video clip
-                                        </div>
-                                        <div class="btn-dangkytuvan">
-                                             <div class="btn-dangkytuvan-wrap">
-                                                  <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
-                                                            alt="">
-                                                  </div>
-                                                  <div class="text">
-                                                       Đăng ký tư vấn
-                                                  </div>
-                                             </div>
-
-                                        </div>
-                                   </div>
-
-                              </div>
-                         </div>
-                    </div>
-                    <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-viralvideo.webp)'"
-                         [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
-                         <div class="banner-content">
-                              <div class="container">
-                                   <div class="banner-content-wrap">
-                                        <div class="title-banner">Dịch vụ sản xuất Phim viral video</div>
-                                        <div class="des-banner">Nhà sản xuất phim quảng cáo số 1 miền Bắc ,
-                                             <br>
-                                             trên 12 năm kinh nghiệm
-                                             với hơn 2000 video clip
-                                        </div>
-                                        <div class="btn-dangkytuvan">
-                                             <div class="btn-dangkytuvan-wrap">
-                                                  <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
-                                                            alt="">
-                                                  </div>
-                                                  <div class="text">
-                                                       Đăng ký tư vấn
-                                                  </div>
-                                             </div>
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-                    </div>
-                    <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-phim-doanh-nghiep.webp)'"
-                         [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
-                         <div class="banner-content">
-                              <div class="container">
-                                   <div class="banner-content-wrap">
-                                        <div class="title-banner">Dịch vụ sản xuất Phim doanh nghiệp</div>
-                                        <div class="des-banner">Nhà sản xuất phim quảng cáo số 1 miền Bắc ,
-                                             <br>
-                                             trên 12 năm kinh nghiệm
-                                             với hơn 2000 video clip
-                                        </div>
-                                        <div class="btn-dangkytuvan">
-                                             <div class="btn-dangkytuvan-wrap">
-                                                  <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
-                                                            alt="">
-                                                  </div>
-                                                  <div class="text">
-                                                       Đăng ký tư vấn
-                                                  </div>
-                                             </div>
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-                    </div>
-                    <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-truyen-thong-tt1.webp)'"
-                         [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
-                         <div class="banner-content">
-                              <div class="container">
-                                   <div class="banner-content-wrap">
-                                        <div class="title-banner" [style.color]="'#fff'">Dịch vụ sản xuất Phim doanh
-                                             nghiệp</div>
-                                        <div class="des-banner" [style.color]="'#fff'">Nhà sản xuất phim quảng cáo số 1
-                                             miền Bắc ,
-                                             <br>
-                                             trên 12 năm kinh nghiệm
-                                             với hơn 2000 video clip
-                                        </div>
-                                        <div class="btn-dangkytuvan">
-                                             <div class="btn-dangkytuvan-wrap">
-                                                  <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
-                                                            alt="">
-                                                  </div>
-                                                  <div class="text">
-                                                       Đăng ký tư vấn
-                                                  </div>
-                                             </div>
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-                    </div>
-                    <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-marketingonline.webp)'"
-                         [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
-                         <div class="banner-content">
-                              <div class="container">
-                                   <div class="banner-content-wrap">
-                                        <div class="title-banner" [style.color]="'#fff'">Dịch vụ truyền thông tổng thể
-                                        </div>
-                                        <div class="des-banner " [style.color]="'#fff'">Thương hiệu có hơn 12 năm kinh
-                                             nghiệm trong lĩnh vực ,
-                                             <br>
-                                             truyền thông quảng cáo. Hơn 300 chiến dịch truyền thông của
-                                             <br>
-                                             khách hàng được triển khai thành công .
-                                        </div>
-                                        <div class="btn-dangkytuvan">
-                                             <div class="btn-dangkytuvan-wrap">
-                                                  <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
-                                                            alt="">
-                                                  </div>
-                                                  <div class="text">
-                                                       Đăng ký tư vấn
-                                                  </div>
-                                             </div>
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-                    </div>
-
-
-               </div>
-          </div>
-     </div>
-
-</div>
-
-<div id="listDichVu">
-     <div class="container">
-          <div class="row">
-               <div class="listDichVu-wrap">
-                 <div *ngFor="let item of dataListDichVu " class="dichVu-item">
-                      <app-template-dichvu [data]="item"></app-template-dichvu>
-                 </div>
-
-               </div >
-          </div>
-     </div>
-</div>
-
-<div id="product">
-     <div class="container">
-          <div class="row">
-             <div class="col-md-4">
-             <div class="product-content">
-               <div class="product-title">VietstarMAX - Nhà sản xuất phim quảng cáo số 1 miền Bắc</div>
-               <div class="product-des">VietstarMAX cung cấp giải pháp tổng thể về Video quảng cáo từ việc xây dựng chiến lược, ý tưởng, quay phim tiền kỳ, dựng hậu kỳ Video và cuối cùng là phát hành Video quảng cáo đạt hiệu quả tối ưu nhất cho khách hàng.</div>
-               <div class="btn-dangkytuvan">
-                    <div class="btn-dangkytuvan-wrap">
-                         <div class="images">
-                              <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
-                                   alt="">
-                         </div>
-                         <div class="text">
-                              Đăng ký tư vấn
-                         </div>
-                    </div>
-
-               </div>
-             </div>
-             </div>
-             <div class="col-md-8">
-               <img src="https://vietstarmax.vn/images/2020/06/22/intro-vietstarmax.jpg" alt="">
-             </div>
-
-          </div>
-     </div>
-</div>
+<app-banner></app-banner>
+<app-danh-sach-dich-vu></app-danh-sach-dich-vu>
+<app-section-product></app-section-product>
+<app-san-pham-noi-bat  [listItem] = listItem></app-san-pham-noi-bat>
