--- a/home/src/app/Layout/bottom/sp-count/logo-khach-hang/logo-khach-hang.component.scss
+++ b/home/src/app/Layout/bottom/sp-count/logo-khach-hang/logo-khach-hang.component.scss
@@ -19,3 +19,18 @@
     }
   }
 }
+@media only screen and (max-width: 1190px) {
+  #logoKhachHang {
+
+    .lgkh-wrap {
+
+      .lgkh-item {
+
+        width: 19.5%;
+
+
+      }
+    }
+  }
+
+}
