--- a/home/src/app/Layout/header/header.component.scss
+++ b/home/src/app/Layout/header/header.component.scss
@@ -7,155 +7,338 @@
   z-index: 99;
   box-shadow: 0 0 4px 0 rgb(0 0 0 / 10%);
   padding: 0px 0;
-  #sp-logo {
-    .logo {
-      .logo-image {
-        width: 100%;
+
+  position: fixed !important;
+  z-index: 99999;
+  background-color: #fff;
+  .sp-header-wrap {
+    display: flex;
+    #sp-logo {
+      .logo {
+        .logo-image {
+          width: 80%;
+          padding: 5px;
+        }
       }
     }
-  }
-  #sp-menu {
-    display: flex;
-    position: relative;
-    .sp-menu-nav {
-      width: 100%;
-      .sp-menu-ul {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        .sp-menu-li {
+    #sp-menu {
+      display: flex;
+      position: relative;
+      .sp-menu-nav {
+        width: 100%;
+        .sp-menu-ul {
           display: flex;
-          .sp-menu-li-wrap {
+          align-items: center;
+          justify-content: space-evenly;
+
+          .sp-menu-li {
             display: flex;
-            align-items: center;
-            .sp-menu-li-text {
-              line-height: 90px;
-              padding: 0 15px;
-              color: #464646;
-              font-size: 15px;
-              text-transform: uppercase;
-              font-weight: 700;
-              &:hover {
-                color: #b8292f;
+            .sp-menu-li-wrap {
+              display: flex;
+              align-items: center;
+              position: relative;
+
+              .sp-menu-li-text {
+                line-height: 90px;
+                padding: 0 15px;
+                color: #464646;
+                font-size: 15px;
+                text-transform: uppercase;
+                font-weight: 700;
+                &:hover {
+                  color: #b8292f;
+                }
+              }
+              .sp-menu-li-span {
+                position: absolute;
+                right: -5%;
               }
             }
-          }
-          &:hover .sp-dropdown {
-            display: block;
-          }
-          .sp-dropdown {
-            display: none;
-            position: absolute;
-            width: 250px;
-            background-color: #fff;
-            box-shadow: 0 3px 5px 0 rgb(0 0 0 / 20%);
-            top: 100%;
-            .sp-dropdown-ul {
-              display: flex;
-              flex-direction: column;
-              .sp-dropdown-li {
-                padding: 5px 20px;
-                border-bottom: 1px solid #eee;
-                position: relative;
-                .sp-dropdown-li-wrap {
-                  display: flex;
+            &:hover .sp-dropdown {
+              display: block;
+            }
+            .sp-dropdown {
+              display: none;
+              position: absolute;
+              width: 250px;
+              background-color: #fff;
+              box-shadow: 0 3px 5px 0 rgb(0 0 0 / 20%);
+              top: 100%;
+              .sp-dropdown-ul {
+                display: flex;
+                flex-direction: column;
+                .sp-dropdown-li {
+                  padding: 5px 20px;
+                  border-bottom: 1px solid #eee;
                   position: relative;
-                  .sp-dropdown-li-text {
-                    padding: 0;
-                    line-height: 100%;
-                    color: #464646;
-                    font-size: 14px;
-                    text-transform: uppercase;
-                    font-weight: 600;
-                    line-height: 24px;
-                    padding: 5px 0;
-                    &:hover {
-                      color: #b8292f;
+                  .sp-dropdown-li-wrap {
+                    display: flex;
+                    position: relative;
+                    .sp-dropdown-li-text {
+                      padding: 0;
+                      line-height: 100%;
+                      color: #464646;
+                      font-size: 14px;
+                      text-transform: uppercase;
+                      font-weight: 600;
+                      line-height: 24px;
+                      padding: 5px 0;
+                      &:hover {
+                        color: #b8292f;
+                      }
+                    }
+                    i {
+                      position: absolute;
+                      right: -5%;
                     }
                   }
-                  i {
-                    position: absolute;
-                    right: -5%;
+                  &:hover .sp-dropdown-lv2 {
+                    display: block !important;
                   }
-                }
-                &:hover .sp-dropdown-lv2 {
-                  display: block !important;
-                }
-                .sp-dropdown-lv2 {
-                  display: none;
-                  top: 0;
-                  right: -100%;
+                  .sp-dropdown-lv2 {
+                    display: none;
+                    top: 0;
+                    right: -100%;
+                  }
                 }
               }
             }
           }
+          .sp-menu-li-trangchu {
+            display: none;
+          }
         }
       }
     }
-  }
-  #sp-search {
-    .sp-search-wrap {
-      height: 100%;
-      display: flex;
-      align-items: center;
-
-      .search {
+    #sp-search {
+      .sp-search-wrap {
+        height: 100%;
         display: flex;
-        .wrap-input-search {
-        position: relative;
+        align-items: center;
 
-          .input-search {
-            display: none;
-            position: absolute;
-            right: 100%;
-            z-index: 999;
-            border: 2px solid #aaa;
-            border-radius: 20px;
-            box-shadow: none !important;
-            padding: 2px 15px !important;
-            top: -20%;
-            width: 150px;
-            font-size: 16px;
-            outline: none;
+        .search {
+          display: flex;
+          .wrap-input-search {
+            position: relative;
+
+            .input-search {
+              display: none;
+              position: absolute;
+              right: 100%;
+              z-index: 999;
+              border: 2px solid #aaa;
+              border-radius: 20px;
+              box-shadow: none !important;
+              padding: 2px 15px !important;
+              top: -10%;
+              width: 150px;
+              font-size: 16px;
+              outline: none;
+            }
           }
-        }
 
-        i {
-          font-weight: 900;
-          padding: 0 5px;
-          cursor: pointer;
-          svg {
-            path {
-              stroke: #b8292f;
+          i {
+            font-weight: 900;
+            padding: 0 5px;
+            cursor: pointer;
+            margin-bottom: 20%;
+            svg {
+              path {
+                stroke: #b8292f;
+              }
             }
           }
         }
-      }
-      .lang {
-        display: flex;
-        align-items: center;
-        border: 2px solid #aaa;
-        border-radius: 25px;
-        padding: 0 8px;
+        .lang {
+          display: flex;
+          align-items: center;
+          border: 2px solid #aaa;
+          border-radius: 25px;
+          padding: 0 8px;
 
-        a {
-          font-size: 14px;
-          font-weight: 700;
-          margin-left: 3px;
-          color: #464646;
-        }
-        .lang-vn {
-        }
-        .lang-en {
+          a {
+            font-size: 14px;
+            font-weight: 700;
+            margin-left: 3px;
+            color: #464646;
+          }
+          .lang-vn {
+          }
+          .lang-en {
+          }
         }
       }
     }
+    #icon-menu-mobile {
+      display: none;
+    }
+  }
+  .overlay {
+    display: none;
   }
 }
 
-.tran{
+.tran {
   display: block !important;
-  transition: height .35s ease;
+  transition: height 0.35s ease;
+}
 
+@media only screen and (max-width: 1190px) {
+  .overlay {
+    display: none;
+    &::after {
+      content: "";
+      background-color: #000;
+      position: absolute;
+      width: 100vw;
+      top: 0;
+      height: 100vh;
+      opacity: 0.4;
+    }
+  }
+  #sp-header {
+    position: relative;
+
+    .sp-header-wrap {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      height: 90px;
+
+      #sp-logo {
+        .logo {
+          .logo-image {
+            max-width: 176px;
+          }
+        }
+      }
+      #sp-menu {
+        // display: none;
+        position: absolute;
+        right: 0;
+        width: 300px;
+        z-index: 99;
+
+        .sp-menu-nav {
+          width: 100%;
+          background-color: #222;
+          height: 100vh;
+          z-index: 99;
+
+          .btn-close-menu {
+            color: #fff;
+            float: right;
+            padding: 15px;
+            >i {
+              svg path {
+                stroke: #fff;
+                stroke-width: 0.8px;
+              }
+            }
+          }
+          .sp-menu-ul {
+            align-items: flex-start;
+            flex-direction: column;
+            padding: 30px;
+
+            .sp-menu-li {
+              display: flex;
+              padding: 20px 0;
+
+              .sp-menu-li-wrap {
+                display: flex;
+                align-items: center;
+                position: relative;
+                .sp-menu-li-text {
+                  color: #ddd;
+                  width: 240px;
+                  line-height: 0;
+                  padding: 0;
+                  &:hover {
+                    color: #b8292f;
+                  }
+                }
+                .sp-menu-li-span {
+                  position: absolute;
+                  right: 0%;
+                  color: #ddd;
+                }
+              }
+              &:hover .sp-dropdown {
+                display: block;
+              }
+              .sp-dropdown {
+                display: none;
+                position: absolute;
+                width: 250px;
+                background-color: #fff;
+                box-shadow: 0 3px 5px 0 rgb(0 0 0 / 20%);
+                top: 100%;
+                .sp-dropdown-ul {
+                  display: flex;
+                  flex-direction: column;
+                  .sp-dropdown-li {
+                    padding: 5px 20px;
+                    border-bottom: 1px solid #eee;
+                    position: relative;
+                    .sp-dropdown-li-wrap {
+                      display: flex;
+                      position: relative;
+                      .sp-dropdown-li-text {
+                        padding: 0;
+                        line-height: 100%;
+                        color: #464646;
+                        font-size: 14px;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                        line-height: 24px;
+                        padding: 5px 0;
+                        &:hover {
+                          color: #b8292f;
+                        }
+                      }
+                      i {
+                        position: absolute;
+                        right: -5%;
+                      }
+                    }
+                    &:hover .sp-dropdown-lv2 {
+                      display: block !important;
+                    }
+                    .sp-dropdown-lv2 {
+                      display: none;
+                      top: 0;
+                      right: -100%;
+                    }
+                  }
+                }
+              }
+            }
+            .sp-menu-li-trangchu {
+              display: block;
+            }
+          }
+        }
+      }
+
+      #sp-search {
+        display: flex;
+        align-items: center;
+        .sp-search-wrap {
+          padding-right: 5px;
+        }
+      }
+      #icon-menu-mobile {
+        padding-left: 5px;
+        display: block;
+        color: #b8292f;
+        i {
+          svg path {
+            stroke: #b8292f;
+            stroke-width: 0.8px;
+          }
+        }
+      }
+    }
+  }
 }
