--- a/home/src/app/Layout/bottom/sp-count/sp-count.component.html
+++ b/home/src/app/Layout/bottom/sp-count/sp-count.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div *ngIf="checkHiden" class="row">
         <div class="col-sm-12">
-          <app-khach-hang-noi-ve-chung-toi></app-khach-hang-noi-ve-chung-toi>
+          <!-- <app-khach-hang-noi-ve-chung-toi></app-khach-hang-noi-ve-chung-toi> -->
         </div>
       </div>
       <div class="row">
