--- a/home/src/app/Layout/template/gioi-thieu-layout/gioi-thieu-layout.component.scss
+++ b/home/src/app/Layout/template/gioi-thieu-layout/gioi-thieu-layout.component.scss
@@ -1,10 +1,12 @@
 .gioi-thieu{
     padding: 50px;
+
     .tvc-content{
         padding-top: 60px;
         background-image: url(https://vietstarmax.vn/images/2020/06/11/play-btn-red.png);
         background-repeat: no-repeat;
         background-position: top;
+        background-size: 48px ;
         .title{
             font-size: 32px;
             font-weight: 400;
@@ -47,7 +49,13 @@
         }
     }
     .sppb-addon-content{
-        p{
+        h3{
+            font-size: 18px;
+            font-weight: 700;
+            padding-bottom: 20px;
+        }
+        div{
+            font-size: 18px;
             line-height: 26px;
             margin-bottom: 34px;
             margin-right: 20px;
