--- a/home/src/app/Layout/template/loi-ich-layout/loi-ich-layout.component.html
+++ b/home/src/app/Layout/template/loi-ich-layout/loi-ich-layout.component.html
@@ -10,7 +10,7 @@
         <div class="col-12 col-sm-6">
             <div class="sppb-addon-content">
                 <p *ngFor="let item of content.desc">
-                    <strong>{{item.title}}</strong><br />
+                    <strong>{{item.title}}</strong><br *ngIf="item.title"/>
                    {{item.desc}}</p>
 
             </div>
