--- a/home/src/app/app.component.html
+++ b/home/src/app/app.component.html
@@ -1,3 +1,11 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<!-- <app-dich-vu></app-dich-vu> -->
+<!-- <app-san-xuat-tvc-quang-cao></app-san-xuat-tvc-quang-cao> -->
+<!-- <app-san-xuat-phim-doanh-nghiep></app-san-xuat-phim-doanh-nghiep> -->
+<!-- <app-san-xuat-phim-qc-animation></app-san-xuat-phim-qc-animation> -->
+<!-- <app-phim-du-an-bat-dong-san></app-phim-du-an-bat-dong-san> -->
+<!-- <app-chup-anh-quang-cao></app-chup-anh-quang-cao> -->
+<!-- <app-thiet-ke-qc></app-thiet-ke-qc> -->
+<app-thu-am-qc></app-thu-am-qc>
 <app-bottom [checkCount]="true" ></app-bottom>
