--- a/home/src/styles.scss
+++ b/home/src/styles.scss
@@ -18,6 +18,11 @@ li {
 a {
   text-decoration: none;
 }
+p{
+  font-size: 18px;
+  font-weight: 400;
+  color: #000000;
+}
 .active-lang {
   color: #b8292f !important;
 }
