--- a/home/src/app/Layout/header/header.component.html
+++ b/home/src/app/Layout/header/header.component.html
@@ -10,12 +10,16 @@
             </a>
           </div>
         </div>
-        <div *ngIf="checkBtnMenu" id="sp-menu" class="col-lg-9 ">
+        <!-- <div *ngIf="checkBtnMenu" id="sp-menu" class="col-lg-9 "> -->
+        <div  id="sp-menu" class="col-lg-9 ">
           <nav class="sp-menu-nav" role="navigation">
-            <i class="btn-close-menu" *ngIf="checkBtnMenu" (click)="showMenu()" ><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
-  <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-</svg></i>
+            <i class="btn-close-menu" *ngIf="checkBtnMenu" (click)="showMenu()"><svg xmlns="http://www.w3.org/2000/svg"
+                width="32" height="32" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
+                <path
+                  d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                <path
+                  d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+              </svg></i>
             <ul class="sp-menu-ul">
               <li class="sp-menu-li sp-menu-li-trangchu">
                 <div class="sp-menu-li-wrap">
@@ -24,12 +28,17 @@
               </li>
               <li *ngFor="let menu of listMenu" class="sp-menu-li">
                 <div class="sp-menu-li-wrap">
-                  <a routerLink="{{menu.path !== '' ? menu.path : null}}" class="sp-menu-li-text"
-                    href="">{{menu.name}}</a>
+                  <a href="#" (click)="false" class="sp-menu-li-text" href="">{{menu.name}}</a>
                   <i class="sp-menu-li-span" *ngIf="menu.valueLv1.length>0"><svg xmlns="http://www.w3.org/2000/svg"
                       width="14" height="14" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
                       <path fill-rule="evenodd"
                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                  </i>
+                  <i class="sp-menu-li-span2" *ngIf="menu.valueLv1.length>0"><svg xmlns="http://www.w3.org/2000/svg"
+                      width="16" height="16" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
+                      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                      <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" />
                     </svg>
                   </i>
                 </div>
@@ -81,8 +90,8 @@
               <div class="lang-en"><a href="">EN</a></div>
             </div>
             <div id="icon-menu-mobile" class="col-lg-1">
-              <i *ngIf="!checkBtnMenu" (click)="showMenu()" ><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list"
-                  viewBox="0 0 16 16">
+              <i *ngIf="!checkBtnMenu" (click)="showMenu()"><svg xmlns="http://www.w3.org/2000/svg" width="32"
+                  height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                   <path fill-rule="evenodd"
                     d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
                 </svg>
