--- a/home/src/app/Layout/header/header.component.scss
+++ b/home/src/app/Layout/header/header.component.scss
@@ -176,10 +176,12 @@
             margin-left: 3px;
             color: #464646;
           }
-          .lang-vn {
-          }
-          .lang-en {
-          }
+          // .lang-vn {
+          //   display: block;
+          // }
+          // .lang-en {
+
+          // }
         }
       }
     }
