--- a/home/src/app/app.component.html
+++ b/home/src/app/app.component.html
@@ -7,5 +7,5 @@
 <!-- <app-phim-du-an-bat-dong-san></app-phim-du-an-bat-dong-san> -->
 <!-- <app-chup-anh-quang-cao></app-chup-anh-quang-cao> -->
 <!-- <app-thiet-ke-qc></app-thiet-ke-qc> -->
-<app-thu-am-qc></app-thu-am-qc>
+<!-- <app-thu-am-qc></app-thu-am-qc> -->
 <app-bottom [checkCount]="true" ></app-bottom>
