--- a/home/src/app/Layout/header/header.component.html
+++ b/home/src/app/Layout/header/header.component.html
@@ -10,10 +10,9 @@
             </a>
           </div>
         </div>
-        <!-- <div *ngIf="checkBtnMenu" id="sp-menu" class="col-lg-9 "> -->
-        <div  id="sp-menu" class="col-lg-9 ">
+        <div id="sp-menu"  [ngStyle]="checkShowMenu? ({'display':'none'}) :({'display':'block '})"  class="col-lg-9 ">
           <nav class="sp-menu-nav" role="navigation">
-            <i class="btn-close-menu" *ngIf="checkBtnMenu" (click)="showMenu()"><svg xmlns="http://www.w3.org/2000/svg"
+            <i id="btn-menu-mobile-close" (click)="showMenu()"><svg xmlns="http://www.w3.org/2000/svg"
                 width="32" height="32" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
                 <path
                   d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
@@ -89,8 +88,8 @@
               <div class="lang-vn "><a class="active-lang" href="">VI</a></div>
               <div class="lang-en"><a href="">EN</a></div>
             </div>
-            <div id="icon-menu-mobile" class="col-lg-1">
-              <i *ngIf="!checkBtnMenu" (click)="showMenu()"><svg xmlns="http://www.w3.org/2000/svg" width="32"
+            <div id="btn-menu-mobile-show" (click)="showMenu()" class="col-lg-1">
+              <i  ><svg xmlns="http://www.w3.org/2000/svg" width="32"
                   height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                   <path fill-rule="evenodd"
                     d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
