update code logo thien an

--- a/home/src/app/Layout/header/header.component.html
+++ b/home/src/app/Layout/header/header.component.html
@@ -6,7 +6,7 @@
         <div id="sp-logo" class="col-lg-2 ">
           <div class="logo">
             <a routerLink="/index" href="">
-              <img class="logo-image" src="https://vietstarmax.vn/images/0new/vietstarmax.png" alt="VietstarMax">
+              <img class="logo-image" src="assets/logo.png" alt="Thiên An">
             </a>
           </div>
         </div>
